--- a/amazon/amazonstyle.css
+++ b/amazon/amazonstyle.css
@@ -1,3 +1,64 @@
+.button {
+  background-color: #233040;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  cursor: pointer; }
 
+body {
+  height: 700px;
+  margin: 0px;
+  width: 100%; }
+
+p {
+  color: green; }
+
+header {
+  background-color: #83E2FF;
+  height: 10%;
+  margin: 0px; }
+
+#bar {
+  height: 5%;
+  background-color: green; }
+
+nav {
+  background-color: #83E2FF;
+  height: 6%;
+  margin-top: 1%; }
+
+#container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: none;
+  justify-content: space-between;
+  height: 70%;
+  margin-top: 5%;
+  padding: 1%; }
+  #container * {
+    margin: -1%; }
+
+.teil {
+  background-color: #83E2FF; }
+
+#left {
+  width: 15%; }
+
+#middle {
+  width: 85%;
+  display: flex;
+  flex-flow: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding-bottom: 0px;
+  overflow: hidden; }
+  #middle .smalldiv {
+    width: 20%;
+    background-color: #83E2FF;
+    height: 34%;
+    margin-bottom: 2%; }
 
 /*# sourceMappingURL=amazonstyle.css.map */
