--- a/amazon/amazonstyle.sass
+++ b/amazon/amazonstyle.sass
@@ -12,7 +12,7 @@ $bgc: #83E2FF
 
 
 body
-	height: 700px
+	height: 3000px
 	margin: 0px
 	width: 100%
 
@@ -20,18 +20,26 @@ p
 	color: green
 
 header
+	display: flex
 	background-color: $bgc
-	height: 10%
+	height: 100px
 	margin: 0px
 
 #bar
-	height: 5%
+	height: 30px
 	background-color: green
 
+#logo
+
+#input
+
+#shop
+
+#deliver
+
 nav
-	background-color: $bgc
-	height: 6%
-	margin-top: 1%
+
+ul
 
 #container
 	display: flex
@@ -44,9 +52,6 @@ nav
 	*
 		margin: -1%
 
-.teil
-	background-color: $bgc
-
 #left
 	width: 15%
 
@@ -55,11 +60,8 @@ nav
 	display: flex
 	flex-flow: row
 	flex-wrap: wrap
-	justify-content: space-between
+
 	padding-bottom: 0px
 	overflow: hidden
-	.smalldiv
-		width: 20%
-		background-color: $bgc
-		height: 34%
-		margin-bottom: 2%
+	a
+		margin-left: 2%
