--- a/amazon/amazonstyle.css
+++ b/amazon/amazonstyle.css
@@ -9,7 +9,7 @@
   cursor: pointer; }
 
 body {
-  height: 700px;
+  height: 3000px;
   margin: 0px;
   width: 100%; }
 
@@ -17,18 +17,14 @@ p {
   color: green; }
 
 header {
+  display: flex;
   background-color: #83E2FF;
-  height: 10%;
+  height: 100px;
   margin: 0px; }
 
 #bar {
-  height: 5%;
+  height: 30px;
   background-color: green; }
-
-nav {
-  background-color: #83E2FF;
-  height: 6%;
-  margin-top: 1%; }
 
 #container {
   display: flex;
@@ -41,9 +37,6 @@ nav {
   #container * {
     margin: -1%; }
 
-.teil {
-  background-color: #83E2FF; }
-
 #left {
   width: 15%; }
 
@@ -52,13 +45,9 @@ nav {
   display: flex;
   flex-flow: row;
   flex-wrap: wrap;
-  justify-content: space-between;
   padding-bottom: 0px;
   overflow: hidden; }
-  #middle .smalldiv {
-    width: 20%;
-    background-color: #83E2FF;
-    height: 34%;
-    margin-bottom: 2%; }
+  #middle a {
+    margin-left: 2%; }
 
 /*# sourceMappingURL=amazonstyle.css.map */
