--- a/amazon/amazonstyle.css
+++ b/amazon/amazonstyle.css
@@ -1,30 +1,54 @@
-.button {
-  background-color: #233040;
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  cursor: pointer; }
-
 body {
   height: 3000px;
-  margin: 0px;
   width: 100%; }
 
 p {
   color: green; }
 
-header {
+#header {
   display: flex;
-  background-color: #83E2FF;
+  flex-direction: row;
+  flex-wrap: wrap;
+  background-color: #233040;
   height: 100px;
-  margin: 0px; }
+  margin: 0px;
+  justify-content: space-between; }
 
-#bar {
-  height: 30px;
-  background-color: green; }
+#logo {
+  width: 100px;
+  height: auto;
+  margin-left: 20px; }
+
+#input {
+  margin-left: 2%;
+  margin-top: 1%;
+  margin-right: 2%;
+  width: 50%; }
+  #input input {
+    width: 100%;
+    height: 20px; }
+
+#rightimg {
+  height: 100%; }
+
+#leftimg {
+  margin-top: -38px;
+  margin-left: 15px; }
+
+nav {
+  padding-right: 250px;
+  margin-top: -25px;
+  margin-right: 50px;
+  width: 60%;
+  display: flex;
+  flex-flow: row; }
+  nav li {
+    text-align: left;
+    list-style-type: none;
+    margin-right: 20px; }
+    nav li a {
+      text-decoration: none;
+      color: lightgrey; }
 
 #container {
   display: flex;
